themes/inbeat/assets/scss/partials/_popup.scss
.noTrigger{
	pointer-events: none !important;
}
.popupTrigger {
	cursor: pointer;
}
.blur:not(.popupOverlay):not(#header){
	filter: blur(6px);
	-webkit-filter: blur(6px);
	-moz-filter: blur(6px);
	-o-filter: blur(6px);
	-ms-filter: blur(6px);
}
.popupOverlay {
	z-index: -1;
	opacity: 0;
	display: flex;
	background: rgba(0, 0, 0, 0.6);
	position: fixed;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
	transition: all .2s ease-in-out;

	justify-content: center;
	align-items: center;
	&.popupOverlay--fadeIn {
		opacity: 1;
		z-index: 100;
	}
	.popup {
		height: auto;
		//padding: 10px;
		margin: 10px;
		@include breakpoint(sm) {
			width: 800px;
			//height: 600px;
		}
		@include breakpoint(md) {
			width: 1000px;
			//height: 720px;
		}
		opacity: 0;
		background-color: white;
		//position: absolute;
		transform: translateY(100px);
		transition: all .25s ease-in-out;
		&.popupInner--fadeIn {
			opacity: 1;
			transform: translateY(32px);
		}
		&.auto-wh{
			width: auto;
			height: auto;
		}
		.content-wrapper {
	
			video {
				width: 100%;
				padding-top: 15px;
				@include breakpoint(sm) {
					padding-top: 60px;
				}
			}
			.content-video{
				padding: 0 15px;
				@include breakpoint(sm) {
					padding:0 50px
				}
			}
		}

		.close {
			z-index: 100;
			cursor: pointer;
			position: absolute;
			top: 0;
			right: 0;
			padding: 20px;
			svg {
				width: 20px;
				height: 20px;
			}
		}
		.btn {
			width: 100% !important;
			background-color: #151515;
			color: white;
			left: 0;
			height: 80px;
			border: none;
			font-size: 18px;
			font-weight: 400;
			margin-top: 10px;
			bottom: 0;
			padding: 5px 0px;
			cursor: pointer;
			border-radius: 0;
			outline: none !important;
			@include breakpoint(sm) {
				margin-top: 40px;
				height: 64px;
				padding: 5px 0px;
			}
		}
	}
}

